--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,16 @@
         "link-name": "off"
       }
     ],
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-ms-touch-action",
+          "scrollbar-width",
+          "scrollbar-width: none"
+        ]
+      }
+    ]
   }
 }
